Fix heros overflowing page on rtl

--- a/assets/scss/rtl/organisms/hero/_country-hero-3.scss
+++ b/assets/scss/rtl/organisms/hero/_country-hero-3.scss
@@ -1,4 +1,6 @@
 .country-hero-3 {
+    overflow: hidden;
+
     .left-bar {
         right: auto;
         left: calc(100% - 58px);
