--- a/assets/scss/rtl/organisms/hero/_country-hero-4.scss
+++ b/assets/scss/rtl/organisms/hero/_country-hero-4.scss
@@ -1,4 +1,6 @@
 .country-hero-4 {
+    overflow: hidden;
+
     .image-block {
         .cta-button {
             left: 70px;
