--- a/assets/scss/rtl/organisms/hero/_global-hero-1.scss
+++ b/assets/scss/rtl/organisms/hero/_global-hero-1.scss
@@ -1,4 +1,6 @@
 .global-hero-1 {
+    overflow: hidden;
+
     .hero-content-text {
         .title-text {
             &:after {
